[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://leg.png" type="Texture" id=3]
[ext_resource path="res://player_hand.png" type="Texture" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://hand.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.35348
height = 3.28968

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CapsuleShape2D" id=33]
radius = 3.14736
height = 1.66456

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -4.2 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "roll"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_end"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("body/right_hand")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_end"
} ]
}

[sub_resource type="Animation" id=41]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -4.5 ) ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body/leftleg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rightleg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("body/leftleg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rightleg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=39]
resource_name = "roll"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("body/leftleg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rightleg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=35]
resource_name = "walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/leftleg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rightleg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 0, 0.5 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.57628e-06, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="body" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="leftleg" type="Node2D" parent="body"]
show_behind_parent = true
position = Vector2( -1, 1.5 )
rotation = 0.174533

[node name="Sprite" type="Sprite" parent="body/leftleg"]
texture = ExtResource( 3 )
offset = Vector2( 0.5, -2 )

[node name="rightleg" type="Node2D" parent="body"]
show_behind_parent = true
position = Vector2( 1, 1.5 )
rotation = -0.174533

[node name="Sprite" type="Sprite" parent="body/rightleg"]
texture = ExtResource( 3 )
offset = Vector2( 0.5, -2 )
flip_h = true

[node name="right_hand" parent="body" instance=ExtResource( 7 )]
position = Vector2( 1, -1 )
texture = ExtResource( 4 )
offset = Vector2( 4, 0 )

[node name="left_hand" type="Sprite" parent="body"]
rotation = 3.29867
texture = ExtResource( 4 )
offset = Vector2( 4, -1 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -1 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -2.09134 )
shape = SubResource( 33 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bodyAnimator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 37 )
anims/idle = SubResource( 38 )
anims/roll = SubResource( 40 )
anims/walk = SubResource( 41 )

[node name="legsAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 36 )
anims/idle = SubResource( 34 )
anims/roll = SubResource( 39 )
anims/walk = SubResource( 35 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]
